--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,21 @@
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+h1, h2, h3, p {
+    margin: 0;
+}
 a {
     text-decoration: none;
 }
 
 ul {
     list-style: none;
+    margin: 0;
+    padding-left: 0;
 }
+
 
 body {
     font-family: "Roboto", sans-serif;
