--- a/css/styles.css
+++ b/css/styles.css
@@ -22,7 +22,7 @@ display: block;
     width: 1440px;
     height: 3300px;
     top: -1169px;
-    left: 370px;
+    padding-left: 370px;
     gap: 0px;
     opacity: 0px;
 }
