--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,9 @@ img{
 display: block;
 }
 .container {
-    
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
 }
 body {
     font-family: "Roboto", sans-serif;
