--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,10 @@ h1, h2, h3, h4, h5, h6, p {
 a {
     text-decoration: none;
 }
-
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 ul {
     list-style: none;
     margin: 0;
