--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,9 @@
 *::after {
     box-sizing: border-box;
 }
+.header-section{
+    border-bottom: 1px solid #e7e9fc;
+}
 h1, h2, h3, h4, h5, h6, p {
     margin: 0;
 }
