--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@ display: block;
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
+    display: flex;
 }
 body {
     font-family: "Roboto", sans-serif;
