--- a/css/styles.css
+++ b/css/styles.css
@@ -35,7 +35,10 @@ body {
     background-color: #FFFFFF;
     color: #434455;
 }
-
+.header-navigation{
+    display: flex;
+    align-items: center;
+}
 .logo {
     font-family: "Raleway", sans-serif;
     font-weight: 700;
@@ -44,6 +47,7 @@ body {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px;
 }
 
 .logo-web-studio {
