--- a/css/styles.css
+++ b/css/styles.css
@@ -63,7 +63,9 @@ body {
     display: flex;
     gap: 40px;
 }
-
+.list-item:not(:last-child){
+margin-right: 40px;
+}
 .header-list-items {
     font-weight: 500;
     font-size: 16px;
