--- a/css/styles.css
+++ b/css/styles.css
@@ -72,6 +72,7 @@ margin-right: 40px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    padding: 24px 0 24px;
 }
 
 .header-list-items:hover,
