--- a/css/styles.css
+++ b/css/styles.css
@@ -81,8 +81,13 @@ margin-right: 40px;
 
 }
 
-address {
+.header-address {
     font-style: normal;
+    display: flex;
+    gap: 40px;
+}
+.header-address:not(:last-child) {
+    margin-right: 40px;
 }
 
 .info {
