--- a/css/styles.css
+++ b/css/styles.css
@@ -28,7 +28,9 @@ display: block;
     max-width: 1158px;
     padding: 0 15px;
     margin: 0 auto;
-    display: flex;
+}
+.header-container{
+display: flex;
 }
 body {
     font-family: "Roboto", sans-serif;
