--- a/css/styles.css
+++ b/css/styles.css
@@ -109,6 +109,7 @@ body {
 
 .first-section {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .title-first-section {
@@ -118,6 +119,7 @@ body {
     text-align: center;
     letter-spacing: 0.02em;
     color: #ffffff;
+    max-width: 496px;
 }
 
 
@@ -129,6 +131,11 @@ body {
     letter-spacing: 0.04em;
     color: #ffffff;
     cursor: pointer;
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    border: none;
+    border-radius: 4px;
 }
 
 .button:hover {
