--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ body {
 
 .first-section {
     background-color: #2e2f42;
-    padding: 188px 0;
+    padding: 188px 0 188px;
 }
 
 .title-first-section {
@@ -122,7 +122,23 @@ body {
     max-width: 496px;
 }
 
-
+.second-section{
+    padding: 120px 0;
+}
+.visually-hidden{
+    position: absolute;
+        width: 1px;
+        height: 1px;
+        margin: -1px;
+        border: 0;
+        padding: 0;
+        white-space: nowrap;
+        clip-path: inset(100%);
+        clip: rect(0 0 0 0);
+        overflow: hidden;
+    }
+    
+}
 .button {
     background-color: #4D5AE5;
     font-weight: 500;
