--- a/css/styles.css
+++ b/css/styles.css
@@ -165,13 +165,20 @@ body {
 h2 {
     font-weight: 700;
 }
-
+.adv-list{
+    display: flex;
+    gap: 24px;
+}
 .list-item-second {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin-bottom: 8px;
+}
+.adv-list-item{
+    width: calc((100% - 72px) / 4);
 }
 
 .list-item-second-paragraph {
