--- a/css/styles.css
+++ b/css/styles.css
@@ -112,15 +112,6 @@ body {
     padding: 188px 0 188px;
 }
 
-.title-first-section {
-    font-weight: 700;
-    font-size: 56px;
-    line-height: 1.07;
-    text-align: center;
-    letter-spacing: 0.02em;
-    color: #ffffff;
-    max-width: 496px;
-}
 
 .second-section{
     padding: 120px 0;
@@ -137,7 +128,16 @@ body {
         clip: rect(0 0 0 0);
         overflow: hidden;
     }
-    
+    .title-first-section {
+    font-weight: 700;
+    font-size: 56px;
+    line-height: 1.07;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    max-width: 496px;
+    display: block;
+}
 
 .button {
     background-color: #4D5AE5;
@@ -152,6 +152,7 @@ body {
     height: 56px;
     border: none;
     border-radius: 4px;
+    margin: 0;
 }
 
 .button:hover {
