--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,8 @@ h2 {
 
 .third-section {
     background-color: #F4F4FD;
+    padding: 120px 0;
+
 }
 
 .third-section-title {
@@ -201,18 +203,30 @@ h2 {
     letter-spacing: 0.02em;
     text-transform: capitalize;
     color: #2e2f42;
+    margin-bottom: 72px;
+}
+.people-pics{
+    display: flex;
+    gap: 24px;
 }
 
 .image-third-section {
     background-color: #FFFFFF;
+    calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
 }
-
+.name{
+    padding: 32px 0;
+}
 .list-item-third {
     font-weight: 500;
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    text-align: center;
+    margin-bottom: 8px;
+    text-align: center;
 }
 
 .list-item-third-paragraph {
