--- a/css/styles.css
+++ b/css/styles.css
@@ -137,6 +137,7 @@ body {
     color: #ffffff;
     max-width: 496px;
     display: block;
+    margin: auto;
 }
 
 .button {
@@ -152,7 +153,7 @@ body {
     height: 56px;
     border: none;
     border-radius: 4px;
-    margin: 0;
+    margin: auto;
 }
 
 .button:hover {
