--- a/css/styles.css
+++ b/css/styles.css
@@ -236,7 +236,21 @@ h2 {
     letter-spacing: 0.02em;
     text-align: center;
 }
-
+.apps{
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
+.apps-item{
+    width: calc((100% - 48px) / 3);
+}
+.div-container{
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+    margin-bottom: 8px;
+}
 .footer-class {
     background-color: #2E2F42;
     padding: 100px 0;
