--- a/css/styles.css
+++ b/css/styles.css
@@ -139,6 +139,9 @@ body {
     display: block;
     margin: auto;
 }
+.second-class-button{
+    padding-top: 48px;
+}
 
 .button {
     background-color: #4D5AE5;
@@ -225,16 +228,15 @@ h2 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    text-align: center;
     margin-bottom: 8px;
-    text-align: center;
+    text-align: left;
 }
 
 .list-item-third-paragraph {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    text-align: center;
+    text-align: left;
 }
 .apps{
     display: flex;
@@ -249,7 +251,6 @@ h2 {
     padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: none;
-    margin-bottom: 8px;
 }
 .footer-class {
     background-color: #2E2F42;
