--- a/css/styles.css
+++ b/css/styles.css
@@ -229,10 +229,25 @@ h2 {
     letter-spacing: 0.02em;
     color: #2e2f42;
     margin-bottom: 8px;
+    text-align: center;
+}
+.list-item-fourth {
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    margin-bottom: 8px;
     text-align: left;
 }
 
 .list-item-third-paragraph {
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: center;
+}
+.list-item-fourth-paragraph {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
